src/app/globals.css
* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

html,
body {
  max-width: 100vw;
  overflow-x: hidden;
  padding-right: 0 !important;
  background-color: #f5f5f5;
}

header {
  padding-right: 0 !important;
}

.card span {
  display: inline-block;
  transition: transform 200ms;
  font-size: 16px;
}

.card h2 {
  font-weight: 600;
  margin-bottom: 0.7rem;
  font-size: 16px;
}

.crudComponent
  .MuiDataGrid-row:not(.MuiDataGrid-row--dynamicHeight)
  > .crudCellName {
  white-space: normal;
  line-height: 23px;
}

.iconTab .MuiTabs-indicator {
  background-color: transparent;
}

.sideMenuLink {
  color: #000;
}

.activeMenu {
  background-color: #007bff;
  color: #fff;
  display: block;
}

.activeMenu .MuiListItemIcon-root {
  color: #fff;
}

.activeMenu span {
  color: #fff;
}

.sidebarDrawer .MuiPaper-elevation {
  overflow-x: initial !important;
  overflow-y: initial !important;
}

.loginbtn:hover{
  background: "#282a35",
}

.headerLogo span{
  font-size: 25px;
  text-transform: uppercase;
  font-weight: bold;
  letter-spacing: 3px;
  /* line-height: 12px; */
}

@media only screen and (max-width: 1024px) and (min-width: 600px) {
  .productBtn {
    display: flex;
    flex-wrap: wrap;
  }

  .productBtn .MuiButtonBase-root {
    width: 140px;
    margin-top: 10px;
  }

  .productBtn .productWishlistBtn {
    margin: 20px;
    padding-left: 20px;
  }

}

@media only screen and (width: 1366px) {
  .carouselBox .MuiGrid-root{
    width: 1100px;
  }
}


@media only screen and (width: 1024px) {
  .carouselBox .MuiGrid-root{
    width: 780px;
  }
}

@media (max-width: 568px) {
  .wishList .MuiTableCell-root {
    padding: 12px;
  }
}

@media (max-width: 540px) {
  .wishList .MuiTableCell-root {
    padding: 10px;
  }
}

@media (max-width: 400px) {
  .importExportButton .MuiButtonBase-root {
    text-transform: capitalize;
  }

  .crudComponentList .crudList {
    flex-basis: 73%;
  }

  .iconTab .MuiTab-labelIcon {
    padding: 12px;
  }
}

@media (max-width: 450px) {
  .tabScroller .MuiTabs-flexContainer {
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
  }

  .tabScroller .MuiTabs-indicator {
    background-color: transparent;
  }

  .tabScroller .activeTab {
    border: 1px solid #1976d2;
  }

  .wishList .MuiTableRow-root {
    display: flex;
    flex-wrap: wrap;
    border-bottom: 1px solid #ccc;
  }

  .wishList .MuiTableCell-root {
    border-bottom: transparent;
    padding: 15px;
  }

  .wishList .addToCart {
    margin-top: 0;
    padding: 0;
  }

  .wishList .wishlishBtn .MuiButtonBase-root {
    text-transform: capitalize;
    min-width: 100px;
  }
}

@media (max-width: 320px) {
  .wishList .MuiTableCell-root {
    border-bottom: transparent;
    padding: 2px;
  }
  .wishList .wishlishBtn .MuiButtonBase-root {
    text-transform: capitalize;
    min-width: 146px;
    margin-top: 10px;
  }
  .loginPage {
    justify-content: center;
  }
  .loginPage .rememberMe label {
    margin-left: 0;
  }
  .loginPage .forgotPassword {
    margin-bottom: 10px;
  }
  .loginPage .forgotPassword a {
    margin-right: 0;
  }
  .crudComponentList .crudList {
    flex-basis: 69%;
  }
}

@media (max-width: 300px) {
  .tabElement .MuiTabs-flexContainer {
    flex-wrap: wrap;
  }

  .tabElement .MuiTabs-indicator {
    background-color: transparent;
  }

  .tabElement .Mui-selected {
    border-bottom: 2px solid #1976d2;
  }
}

.sidebar-open .advance-kanbanboard {
  max-width: 80vw;
}

.kanbanBoardAccordion .MuiAccordionSummary-content {
  margin: 8px 0;
}

.kanbanBoardAccordion .MuiAccordionSummary-root.Mui-expanded {
  min-height: 40px;
}

.carousel {
  width: 100%;
  overflow: hidden;
  max-width: 300px;
  margin: 0 auto;
}

.swiper {
  width: 100%;
  height: 100%;
}

.swiper-slide {
  text-align: center;
  font-size: 18px;
  width: 300px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.vertical-carousel {
  height: 350px;
}

.swiper-slide img {
  display: block;
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.swiper-container {
  width: 100%;
  overflow: hidden;
}

.custom-pagination .swiper-pagination-bullet {
  width: 20px !important;
  height: 20px !important;
  text-align: center;
  line-height: 20px;
  font-size: 12px;
  color: #000 !important;
  opacity: 1 !important;
  background: rgba(0, 0, 0, 0.2) !important;
}

.custom-pagination .swiper-pagination-bullet-active {
  color: #fff !important;
  background: #007aff !important;
}

.swiper.cube-carousel {
  width: 300px;
  height: 300px;
  left: 50%;
  top: 50%;
  margin-left: -150px;
  margin-top: -150px;
}

.cube-carousel .swiper-slide {
  background-position: center;
  background-size: cover;
}

.cube-carousel .swiper-slide img {
  display: block;
  width: 100%;
}

.coverflow-carousel.swiper {
  width: 100%;
  padding-top: 50px;
  padding-bottom: 50px;
}

.coverflow-carousel .swiper-slide {
  background-position: center;
  background-size: cover;
  width: 300px;
  height: 300px;
}

.coverflow-carousel .swiper-slide img {
  display: block;
  width: 100%;
}

.autoplay-progress {
    position: absolute;
    right: 16px;
    bottom: 16px;
    z-index: 10;
    width: 48px;
    height: 48px;
    display: flex;
    align-items: center;
    justify-content: center;
    font-weight: bold;
    color: #fff;
}

.autoplay-progress svg {
  --progress: 0;
  position: absolute;
  left: 0;
  top: 0px;
  z-index: 10;
  width: 100%;
  height: 100%;
  stroke-width: 4px;
  stroke: #fff;
  fill: none;
  stroke-dashoffset: calc(125.6px * (1 - var(--progress)));
  stroke-dasharray: 125.6;
  transform: rotate(-90deg);
}

.notificationDataTable .MuiDataGrid-main .MuiDataGrid-virtualScroller{
  min-height: 50px;
}

